tests/snapshots/parser_error_fixtures/missing_instance_body_brace.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_instance_body_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Instance Body

Expected `{` to begin instance body.

  examples/parser_errors/missing_instance_body_brace.flx:12:5
   |
12 |     fn size(x) { x }
   |     ^^

Hint:
  Instance declarations use `instance ClassName<Type> { fn method(...) { ... } }`.
== stdout ==
<not executed>
